@startuml

class Record {
    + StartTime : DateTime
    + EndTime : DateTime?
    + IsDone : bool
    + Title : string
    + Notes : List<Note>
    + Date : DateOnly
    + Project : Project
    + Id : Guid
}

class Project {
    + Name :string
    + Id : Guid
}

class Note {
    + Text : string
    + Id : Guid
    + Created : DateTime
    + LastEdited : DateTime
    + RecordId : Guid
}

Record --> Project
Record "1"  --> "*" Note

@enduml

